--- a/root/GIP WEBSITE/contact.html
+++ b/root/GIP WEBSITE/contact.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/contact.css">
+  <link rel="stylesheet" href="./styles/contact.css">
   <link rel="icon" href="images/colosmini.ico">
   <title>COLOS</title>
 </head>
@@ -21,7 +21,7 @@
 
 
       <a href="index.html"><img id="mainlogo" href="index.html" src="images/colos.png" alt="COLOS"
-          style="margin-right:50px; margin-left:50px;"></a>
+          ></a>
 
 
 
