--- a/root/GIP WEBSITE/index.html
+++ b/root/GIP WEBSITE/index.html
@@ -14,140 +14,89 @@
 
 <body>
 
+<!-- Navbar -->
+  <nav>
+    <ul class="nav-items">
+      <div class="search-container">
+        <i class="fa fa-search search-icon"></i>
+        <input type="text" class="search-input" placeholder="Search...">
+      </div>
+    </ul>
+    <div class="logo"><img src="./images/colosg.gif" alt="COLOS"></div>
+    <ul class="right-nav-items">
+      <li class="nav-item">Item 3</li>
+      <li class="nav-item">Item 4</li>
+    </ul>
+  </nav>
+<!-- End Navbar -->
 
-  <div id="header">
-
-    
-
-    <span>
-      <a id="icontop" href="contact.html"><i class="fa fa-envelope" style="font-size: 25px; color: black;"
-          aria-hidden="true"></i></a>
-    </span>
 
 
-    <a href="index.html"><img id="mainlogo" href="index.html" src="images/colosg.gif" alt="COLOS"
-        style="margin-right:50px; margin-left:50px;"></a>
 
-    <a id="icontop" href=""><i class="fa fa-shopping-bag" style="font-size: 25px; color: black;"
-        aria-hidden="true"></i></a>
-
-  </div>
 
   <div id="first">image</div>
 
-  <div class="content">
 
-    <div class="swipe">
+  <div class="row">
+    <div class="header">
+      <h3 class="title">New</h3>
+      <div class="progress-bar"></div>
+    </div>
+    <div class="container">
+      <button class="handle left-handle">
+        <div class="text">&#8249;</div>
+      </button>
+      <div class="slider">
+        <img src="./images/schoenen1/1.png">
+        <img src="./images/schoenen1/2.png">
+        <img src="./images/schoenen1/3.png">
+        <img src="./images/schoenen1/4.png">
+        <img src="./images/schoenen1/5.png">
+        <img src="./images/schoenen1/6.png">
+        <img src="./images/schoenen1/7.png">
+        <img src="./images/schoenen1/8.png">
 
-      <div class="carousel1">
-        <div class="carousel-items">
-          <div class="carousel-item">
-            <img src="/images/schoenen1/1.png" alt="Image 1" class="carousel-image">
-          </div>
 
-          <div class="carousel-item">
-            <img src="/images/schoenen1/2.png" alt="Image 4" class="carousel-image">
-          </div>
-
-          <div class="carousel-item">
-            <img src="/images/schoenen1/3.png" alt="Image 5" class="carousel-image">
-          </div>
-
-          <div class="carousel-item">
-            <img src="/images/schoenen1/4.png" alt="Image 6" class="carousel-image">
-          </div>
-
-          <div class="carousel-item">
-            <img src="/images/schoenen1/5.png" alt="Image 10" class="carousel-image">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/schoenen1/6.png" alt="Image 11" class="carousel-image">
-          </div>
-
-          <div class="carousel-item">
-            <img src="/images/schoenen1/7.png" alt="Image 12" class="carousel-image">
-          </div>
-          <div class="carousel-item">
-            <img src="/images/schoenen1/8.png" alt="Image 13" class="carousel-image">
-          </div>
-
-        </div>
-
-        <button class="carousel-button carousel-button-prev">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M15.41 7.41L14 6L8 12L14 18L15.41 16.59L10.83 12L15.41 7.41Z" fill="#666" />
-          </svg>
-        </button>
-        <button class="carousel-button carousel-button-next">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M8.59 16.59L13.17 12L8.59 7.41L10 6L16 12L10 18L8.59 16.59Z" fill="#666" />
-          </svg>
-        </button>
       </div>
+      <button class="handle right-handle">
+        <div class="text">&#8250;</div>
+      </button>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="header">
+      <h3 class="title">Popular</h3>
+      <div class="progress-bar"></div>
+    </div>
+    <div class="container" style="margin-bottom: 50px;">
+      <button class="handle left-handle">
+        <div class="text">&#8249;</div>
+      </button>
+      <div class="slider">
+        <img src="./images/schoenen2/1.png">
+        <img src="./images/schoenen2/2.png">
+        <img src="./images/schoenen2/3.png">
+        <img src="./images/schoenen2/4.png">
+        <img src="./images/schoenen2/5.png">
+        <img src="./images/schoenen2/6.png">
+        <img src="./images/schoenen2/7.png">
+        <img src="./images/schoenen2/8.png">
+
+      </div>
+      <button class="handle right-handle">
+        <div class="text">&#8250;</div>
+      </button>
     </div>
   </div>
 
 
-  </div>
-  <div class="yui-u">
-    <div class="content">
-      <div class="swipe">
 
 
-        <div class="carousel2">
-          <div class="carousel-items">
-            <div class="carousel-item">
-              <img src="/images/schoenen2/1.png" alt="Image 1" class="carousel-image">
-            </div>
 
-            <div class="carousel-item">
-              <img src="/images/schoenen2/2.png" alt="Image 4" class="carousel-image">
-            </div>
-
-            <div class="carousel-item">
-              <img src="/images/schoenen2/3.png" alt="Image 5" class="carousel-image">
-            </div>
-
-            <div class="carousel-item">
-              <img src="/images/schoenen2/4.png" alt="Image 6" class="carousel-image">
-            </div>
-
-            <div class="carousel-item">
-              <img src="/images/schoenen2/5.png" alt="Image 10" class="carousel-image">
-            </div>
-            <div class="carousel-item">
-              <img src="/images/schoenen2/6.png" alt="Image 11" class="carousel-image">
-            </div>
-
-            <div class="carousel-item">
-              <img src="/images/schoenen2/7.png" alt="Image 12" class="carousel-image">
-            </div>
-            <div class="carousel-item">
-              <img src="/images/schoenen2/8.png" alt="Image 13" class="carousel-image">
-            </div>
-
-          </div>
-
-          <button class="carousel-button carousel-button-prev">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M15.41 7.41L14 6L8 12L14 18L15.41 16.59L10.83 12L15.41 7.41Z" fill="#666" />
-            </svg>
-          </button>
-          <button class="carousel-button carousel-button-next">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M8.59 16.59L13.17 12L8.59 7.41L10 6L16 12L10 18L8.59 16.59Z" fill="#666" />
-            </svg>
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
+  <div id="secondary">end</div>
 
 
-  
-    <div id="secondary">end</div>
-  
-  
 
   <footer class="footer-container">
 
