--- a/root/GIP-WEBSITE/index.html
+++ b/root/GIP-WEBSITE/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
   <link rel="icon" href="images/colosmini.ico">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
+    integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <title>COLOS</title>
@@ -14,7 +16,7 @@
 
 <body>
 
-<!-- Navbar -->
+  <!-- Navbar -->
   <nav>
     <ul class="nav-items">
       <div class="search-container">
@@ -24,17 +26,22 @@
     </ul>
     <div class="logo"><img src="./images/colosg.gif" alt="COLOS"></div>
     <ul class="right-nav-items">
-      <li class="nav-item">Item 3</li>
-      <li class="nav-item">Item 4</li>
+      <li class="nav-item"><i alt="Profile" class="fas fa-user"></i></li>
+      <li class="nav-item"><i alt="Favorite" class="fas fa-heart"></i></li>
+      <li class="nav-item"><i alt="Basket" class="fas fa-shopping-basket"></i></li>
     </ul>
   </nav>
-<!-- End Navbar -->
+  <!-- End Navbar -->
 
 
 
 
 
-  <div id="first">image</div>
+  <div id="first">
+    <h3 class="names">SEPPUKU</h3>
+    <h3 class="names">JHONA</h3>
+    <h3 class="names">NOUR</h3>
+  </div>
 
 
   <div class="row">
