--- a/root/contact.html
+++ b/root/contact.html
@@ -32,7 +32,7 @@
 
           <h1>Contact Us</h1>
           <h3>Number</h3>
-          <p>+32 0478 69 69 69</p>
+          <p><a href="tel:+32 478 69 69 69">+32 0478 69 69 69</a></p>
           <h3>Belgium</h3>
           <p>GO! talent, Begijnhoflaan 1, 9200 Dendermonde</p><br>
           <iframe
